--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,19 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.20'
     annotationProcessor 'org.projectlombok:lombok:1.18.20'
     implementation 'com.opencsv:opencsv:5.7.1'
+    implementation 'org.postgresql:postgresql:42.3.1'
+
+    implementation 'org.hibernate:hibernate-core:6.2.2.Final'
+
+//    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.6'
+
+
+
+    implementation 'org.hibernate:hibernate-core:6.2.2.Final'
+
+
+
+
 
 }
 
